--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -66,7 +66,7 @@
                                     <li class="primary-title-menu"><a href="{{ path("boutique") }}" title="Achète un BipBip">Achète un BipBip</a></li>
                                     <li class="primary-title-menu-color pt-2">BipBip a besoin de toi</li>
                                     <li class="primary-title-menu"><a href="{{ path("show_collect") }}" title="Les points de collecte">Collecteurs / bippeurs</a></li>
-                                    <li class="primary-title-menu"><a href="{{ path("add_message") }}" title="Organiser une collecte">Asso, école, entreprise, mairie : devenir site de collecte</a></li>
+                                    <li class="primary-title-menu"><a href="{{ path("asso") }}" title="Organiser une collecte">Asso, école, entreprise, mairie : devenir site de collecte</a></li>
                                     <li class="primary-title-menu"><a href="{{ path("organisms_index") }}" title="Nos partenaires">Nos partenaires : Startup innovante et engagée pour la région ?</a></li>
                                     <li class="primary-title-menu"><a href="{{ path("add_message") }}" title="Parrain">Parrain</a></li>
                                     <li class="primary-title-menu-color pt-2">BipBip Infos</li>
