--- a/templates/infos/histoire.html.twig
+++ b/templates/infos/histoire.html.twig
@@ -16,8 +16,26 @@
                 </p>
                 <p>L'étape suivante : <br>
                     Donner vie à des BipBip mobile en mettant en oeuvre des actions locales ! <br>
-                    Au plus nous collectons de téléphones, plus les prix de nos BipBip mobile pourront
+                    Au plus nous collectons de téléphones, plus les prix de nos BipBip mobile pourront être avantageux tout en gardant sa qualité absolue !
+                    <br>
+                    On compte sur toi pour collecter un MAXIMUM de téléphones et de mettre la machine en marche!
                 </p>
+                <div>
+                    <p>
+                        Chiffres clés
+                        <br>
+                        X <br>
+                        Téléphones en hibernation connues
+                    </p>
+                    <p>
+                        X <br>
+                        Etudiants souhaitant agir et s'enrichir (nos bippers)
+                    </p>
+                    <p>
+                        X <br>
+                        Startup innovantes qui gagnent à être
+                    </p>
+                </div>
             </div>
         </div>
     </main>
