--- a/templates/bdc/show.html.twig
+++ b/templates/bdc/show.html.twig
@@ -167,40 +167,17 @@
                 <canvas id="canvas" class="border border-success"></canvas>
                 <div class="col-md-offset-4 col-md-4 col--md-offset-4 top">
 
-                    <div id="img" style="display:none;">
+                {#    <div id="img" style="display:none;">
                         <img src="" id="newimg" class="top" />
                     </div>
+                #}
                 </div>
                 <p>(<span id="bt-clear">effacer</span>)</p>
 
-                <script>
-                    $(function() {
-                        $("#geeks").click(function() {
-                            html2canvas($("#canvas"), {
-                                onrendered: function(canvas) {
-                                    var imgsrc = canvas.toDataURL("image/png");
-                                    console.log(imgsrc);
-                                    $("#newimg").attr('src', imgsrc);
-                                    $("#img").show();
-                                    var dataURL = canvas.toDataURL();
-                                    $.ajax({
-                                        type: "POST",
-                                        url: "script.php",
-                                        data: {
-                                            imgBase64: dataURL
-                                        }
-                                    }).done(function(o) {
-                                        console.log('saved');
-                                    });
-                                }
-                            });
-                        });
-                    });
-                </script>
-                <button id="geeks" type="button"
+                <button id="signature" type="button"
                         class="primary-button top">
                     Valider la signature image</button>
-                <a href="{{ path('bdc_pdf', { 'id': estimation.id}) }}" title="Envoyer la signature" class="primary-button">Valider la signature</a>
+                <a href="{{ path('bdc_pdf', { 'id': estimation.id}) }}" id="signature" title="Envoyer la signature" class="primary-button">Valider la signature</a>
             </div>
         </div>
 
@@ -214,8 +191,35 @@
                 </form>
             </div>
         </div>
+    <div class="js-estimation" data-estimation="{{ estimation.id }}">
+    </div>
 </main>
 {%  endblock %}
 {%  block javascripts %}
     {{ encore_entry_script_tags('signature') }}
+    <script>
+        $(function() {
+            $("#signature").click(function() {
+                html2canvas($("#canvas"), {
+                    onrendered: function(canvas) {
+                        var estimation = document.querySelector('.estimation');
+                        var imgsrc = canvas.toDataURL("image/png");
+                        console.log(imgsrc);
+                        $("#newimg").attr('src', imgsrc);
+                        $("#img").show();
+                        var dataURL = canvas.toDataURL();
+                        $.ajax({
+                            type: "POST",
+                            url: 'admin/bdc/signature/' + estimation,
+                            data: {
+                                imgBase64: dataURL
+                            }
+                        }).done(function(o) {
+                            console.log('saved');
+                        });
+                    }
+                });
+            });
+        });
+    </script>
 {% endblock %}
