Bug in redirection

--- a/templates/bdc/show.html.twig
+++ b/templates/bdc/show.html.twig
@@ -177,7 +177,7 @@
                 <button id="signature" type="button"
                         class="primary-button top">
                     Valider la signature image</button>
-                <a href="{{ path('bdc_pdf', { 'id': estimation.id}) }}" id="signature" title="Envoyer la signature" class="primary-button">Valider la signature</a>
+                <a href="{{ path('generate_signature', { 'id': estimation.id}) }}" id="signature" title="Envoyer la signature" class="primary-button">Valider la signature</a>
             </div>
         </div>
 
