Signature added to bdc

--- a/templates/bdc/bdc.html.twig
+++ b/templates/bdc/bdc.html.twig
@@ -174,7 +174,7 @@
                 <img width="100px; margin-top:30px;" src="images/cachet.png" alt="BipBip Mobile">
             </td>
             <td style="width:50%; border:2px solid black;">
-                <img width="100px; margin-top:30px;" src="uploads/signatures/signature.jpg" alt="BipBip Mobile">
+                <img width="200px; margin-top:30px;" src="uploads/signatures/user116.png" alt="BipBip Mobile">
             </td>
         </tr>
     </table>
