Signature added to BDC

--- a/templates/bdc/pay.html.twig
+++ b/templates/bdc/pay.html.twig
@@ -15,7 +15,7 @@
                     <li>NOM : {{ estimation.user.lastname }}</li>
                     <li>Prénom : {{ estimation.user.firstname }}</li>
                     <li>Email : {{ estimation.user.email }}</li>
-                    <li>N° tél : 0{{ estimation.user.phonenumber }}</li>
+                    <li>N° tél : {{ estimation.user.phonenumber }}</li>
                     <li>Montant : {{ estimation.estimatedPrice }} € </li>
                     <li>Visibilité : Privée</li>
                     <li>Commentaire de la transaction : Paiement BipBip {{ estimation.brand }} {{ estimation.model }}</li>
