--- a/templates/bdc/signature.html.twig
+++ b/templates/bdc/signature.html.twig
@@ -27,7 +27,7 @@
                 (<span id="bt-clear">effacer</span>)
             </div>
             <div class="col-12 text-center" id="img" style="display:none;">
-                Signature ajoutée !
+                Signature ajoutée, patientez pendant la génération du bon de cession...
             </div>
         </div>
 
