--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -22,7 +22,7 @@
         <section>
             <div class="row justify-content-center p-3">
                 <div class="col col-md-4 text-center">
-                    <a href="{{ path('new_estimation') }}">
+                    <a href="{{ path('vends') }}">
                     <img src="{{ asset('images/btn-vends.png') }}" alt="Vends ton tél" class="img-fluid img-home">
                     </a>
                 </div>
