For visitors, all collects are displayed, order by date

--- a/templates/user/showCollect.html.twig
+++ b/templates/user/showCollect.html.twig
@@ -21,7 +21,7 @@
                 </div>
             {% endif %}
         {% else %}
-            <p>Voici les collectes publiques. En te connectant, tu auras accès aux collectes de ton école ou de ton entreprise.</p>
+            <p>Voici les collectes actuellement organisées par BipBip :</p>
         {% endif %}
         {%  if collects is empty %}
             <div class="container">
