Top of the home page responsive

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -16,7 +16,7 @@
 /* GENERAL */
 
 body{
-    font-family: $primary-font, sans-serif;
+    font-family: $primary-font;
     color : black;
     font-size : 1rem;
     background-image: url("../images/fond.png");
