--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -55,9 +55,12 @@
             font-size: 0.9rem;
         }
 
-        iframe {
-            width: 90%;
+        .video {
+            width: 70%;
             height: auto;
+            @include media-breakpoint-up(lg) {
+                width: 100%;
+            }
         }
 
         img {
@@ -79,30 +82,21 @@
 
         p {
             padding-top: 5px;
-            font-size: 0.6rem;
+            font-size: 0.8rem;
             line-height: 0.7rem;
             font-weight: 600;
-            @include media-breakpoint-up(md) {
-                font-size: 0.8rem;
-            }
         }
     }
 
     .photography {
         background-color: $sixth-color;
         img {
-            width: 100%;
+            width: 60%;
             height: auto;
-            @include media-breakpoint-up(md) {
-                width: 70%;
+            @include media-breakpoint-up(sm) {
+                width: 100%;
             }
         }
-    }
-
-    #bipbip-logo {
-        margin-top: -10px;
-        width: 40%;
-        height: auto;
     }
 
     .phones-collected {
@@ -133,16 +127,24 @@
             a{
                 color: $primary-color;
             }
+            .font-weight-bold {
+                font-weight: 900;
+            }
         }
 
         .img-phone {
-            margin-top: -40%;
-            margin-left: 20px;
-            height: 180px;
+            margin-top: -20%;
+            height: 160px;
             @include media-breakpoint-up(md) {
-                height: 220px;
+                margin-top: -20%;
+                height: 240px;
             }
         }
+    }
+
+    #bipbip-logo {
+        height: 40px;
+        width: auto;
     }
 
     .logos-bas {
