--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -65,16 +65,13 @@
                 </section>
 
                 <section>
-                    <div class="row comment-marche mt-3 pb-3">
+                    <div class="row comment-marche mt-3 pb-3 align-items-center">
                         <div class="col-12">
                             <h2 class="primary-title">Comment ça marche ?</h2>
                         </div>
 
                         <div class="col-12 col-lg-6 text-center">
-                            <iframe src="https://www.youtube.com/embed/JDeWXwma_Z4"
-                                    frameborder="0"
-                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                    allowfullscreen></iframe>
+                            <img src="{{ asset('images/video.png') }}" alt="video" class="video">
                         </div>
 
                         <div class="col-12 col-lg-6">
@@ -169,22 +166,22 @@
                         <div class="col-4 col-sm">
                             <img src="{{ asset('images/5logos-neuf.png') }}"
                                  alt="Qualité fonctionnelle et esthétique proche du neuf !">
-                            <p>Qualité fonctionnelle et esthétique proche du neuf !</p>
+                            <p>Qualité fonctionnelle et esthétique proche du neuf&#8239;!</p>
                         </div>
                     </div>
                 </section>
 
                 <section>
                     <div class="photography row text-center pr-2 align-content-center pl-md-5 p-md-5 pt-3 pb-3 pt-md-0 pb-md-0">
-                        <div class="col">
+                        <div class="col-12 col-sm">
                             <img src="{{ asset('images/photo-1.png') }}"
                                  alt="Smartphones contrôlés et certifiés localement">
                         </div>
-                        <div class="col">
+                        <div class="col-12 col-sm">
                             <img src="{{ asset('images/photo-2.png') }}"
                                  alt="Emploi local et énergie étudiante">
                         </div>
-                        <div class="col">
+                        <div class="col-12 col-sm">
                             <img src="{{ asset('images/photo-3.png') }}"
                                  alt="Sécurité et confidentialité">
                         </div>
@@ -192,26 +189,29 @@
                 </section>
 
                 <section>
-                    <div class="row">
-                        <div class="offset-4 col offset-md-5 col-md-7 text-center pb-2">
-                            <h2 class="primary-title">La seconde vie selon</h2>
-                            <img src="{{ asset('images/bipbip-title.png') }}" alt="BipBip" id="bipbip-logo">
-                        </div>
-                    </div>
                     <div class="row justify-content-center phones-collected">
-                        <div class="col-4 offset-md-2 col-md-3 text-right">
-                            <img src="{{ asset('images/perso-bipbip-2.png') }}" alt="Téléphones collectés" class="img-phone">
+                        <div class="col-6 offset-sm-2 col-sm-3 text-right">
+                            <img src="{{ asset('images/phones-vert-rouge.png') }}" alt="Téléphones collectés" class="img-phone">
                         </div>
-                        <div class="col-8 col-md-7 text-center">
+                        <div class="col-6 col-sm-7 text-center">
                             <p class="recolted-number pt-2">1520</p>
                             <p class="recolted-text">téléphones<br>collectés<br> par nos
-                                <a href="#">bippers</a>
+                                <span class="font-weight-bold">bippers</span>
                             </p>
                         </div>
                     </div>
                 </section>
 
                 <section class="logos-bas">
+                    <div class="row">
+                        <div class="col-12">
+                            <h2 class="primary-title">La seconde vie selon
+                                <img src="{{ asset('images/bipbip-title.png') }}"
+                                     alt="BipBip"
+                                     id="bipbip-logo"></h2>
+
+                        </div>
+                    </div>
                     <div class="row justify-content-center p-3">
                         <div class="col-6 col-sm col-md-3 text-center">
                             <img src="{{ asset('images/logos-economique.png') }}" alt="Economique">
