--- a/templates/home/vends.html.twig
+++ b/templates/home/vends.html.twig
@@ -36,7 +36,7 @@
                 <section>
                     <div class="row comment-marche-vends mt-3 pb-3 align-items-center">
                         <div class="col-12">
-                            <h2 class="primary-title">Comment ça marche ?</h2>
+                            <h2 class="primary-title text-left pl-sm-5 ml-sm-5">Comment ça marche ?</h2>
                         </div>
 
                         <div class="col-12">
@@ -121,7 +121,7 @@
                     </div>
                     <div class="row justify-content-center">
                         <div class="col">
-                            <h2 class="primary-title-left">Que devient mon téléphone ?</h2>
+                            <h2 class="primary-title-left">Que devient mon tél ?</h2>
                             <p>Lorsqu'un téléphone passe avec succès les tests de fonctionnement, il sera ensuite vendu à un prix
                                 raisonnable sur notre site Internet.</p>
                             <p>Donne vie à des BipBip mobile en mettant en oeuvre des actions locales&nbsp;!</p>
