--- a/templates/home/vends.html.twig
+++ b/templates/home/vends.html.twig
@@ -110,7 +110,7 @@
                     <div class="row justify-content-center">
                         <div class="col-12 col-sm-8">
                             <h2 class="primary-title-left">Pourquoi vendre mon tél à Bipbip&nbsp;?</h2>
-                            <p>Vendre ton téléphone à BipBip c'est permettre à une petite entreprise du Nord de se
+                            <p class="text-justify">Vendre ton téléphone à BipBip c'est permettre à une petite entreprise du Nord de se
                                 développer. Favoriser l'emploi local chez nous mais aussi chez nos partenaires. C'est aider
                                 à construire une économie plus durable et surtout gagner de l'argent en faisant
                                 une bonne action.</p>
@@ -122,10 +122,10 @@
                     <div class="row justify-content-center">
                         <div class="col">
                             <h2 class="primary-title-left">Que devient mon tél ?</h2>
-                            <p>Lorsqu'un téléphone passe avec succès les tests de fonctionnement, il sera ensuite vendu à un prix
+                            <p class="text-justify">Lorsqu'un téléphone passe avec succès les tests de fonctionnement, il sera ensuite vendu à un prix
                                 raisonnable sur notre site Internet.</p>
-                            <p>Donne vie à des BipBip mobile en mettant en oeuvre des actions locales&nbsp;!</p>
-                            <p>Au plus nous collectons de téléphones, plus les prix de nos BipBip mobiles pourront être bas tout en
+                            <p class="text-justify">Donne vie à des BipBip mobile en mettant en oeuvre des actions locales&nbsp;!</p>
+                            <p class="text-justify">Au plus nous collectons de téléphones, plus les prix de nos BipBip mobiles pourront être bas tout en
                                 gardant sa qualité absolue&nbsp;!</p>
                             <p class="explain-text-color">On compte sur toi pour collecter un MAXIMUM de téléphones&nbsp;!</p>
                         </div>
@@ -142,12 +142,12 @@
                                  alt="Processus de recyclage"
                                  class="img-fluid"
                                  id="photo-processus">
-                            <p>Lorsqu'un téléphone passe avec succès les tests de fonctionnement, il sera ensuite vendu à un prix
+                            <p class="text-justify">Lorsqu'un téléphone passe avec succès les tests de fonctionnement, il sera ensuite vendu à un prix
                                 raisonnable sur notre site Internet.</p>
-                            <p>Donne vie à des BipBip mobile en mettant en oeuvre des actions locales&nbsp;!<br>
+                            <p class="text-justify">Donne vie à des BipBip mobile en mettant en oeuvre des actions locales&nbsp;!<br>
                                 Plus nous collecterons de téléphones, plus les prix de nos BipBip mobiles seront bas.<br>
                                 Et ne t'inquiète pas&nbsp;! L'équipe BipBip assure la qualité de tous nos produits reconditionnés.</p>
-                            <p>Si tu ne sais pas comment choisir le grade de ton téléphone,
+                            <p class="text-justify">Si tu ne sais pas comment choisir le grade de ton téléphone,
                                 <span class="font-weight-bold">jette un coup d'oeil par ici&nbsp;!</span></p>
                         </div>
                     </div>
