Insecable spaces before !

--- a/templates/home/vends.html.twig
+++ b/templates/home/vends.html.twig
@@ -20,7 +20,7 @@
                 <section>
                     <div class="row justify-content-center">
                         <h2 class="primary-title">
-                            <span class="blue-arrow">→</span> GO ! Faire l'estimation ! <span class="blue-arrow">←</span>
+                            <span class="blue-arrow">→</span> GO&#8239;! Faire l'estimation&#8239;! <span class="blue-arrow">←</span>
                         </h2>
                     </div>
                     <div class="row justify-content-center p-2 pb-5">
@@ -99,7 +99,7 @@
                                     <img src="{{ asset('images/coche.png') }}" alt="Bonne action" class="img-fluid">
                                 </div>
                                 <div class="col">
-                                    Tu as fait une bonne action pour ta planète !
+                                    Tu as fait une bonne action pour ta planète&#8239;!
                                 </div>
                             </div>
                         </div>
